# Emulator-SIgnala

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  sifgnal_data2.txt
src/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
